2008-09-24 Introduce drawstyles for lines. Transparently split linestyles
           like 'steps--' into drawstyle 'steps' and linestyle '--'.
           Legends always use drawstyle 'default'. - MM

2008-09-18 Fixed quiver and quiverkey bugs (failure to scale properly
           when resizing) and added additional methods for determining
           the arrow angles - EF

2008-09-18 Fix polar interpolation to handle negative values of theta - MGD

2008-09-14 Reorganized cbook and mlab methods related to numerical
           calculations that have little to do with the goals of those two
           modules into a separate module numerical_methods.py
           Also, added ability to select points and stop point selection
           with keyboard in ginput and manual contour labeling code.
           Finally, fixed contour labeling bug. - DMK

2008-09-11 Fix backtick in Postscript output. - MGD

2008-09-10 [ 2089958 ] Path simplification for vector output backends
           Leverage the simplification code exposed through
           path_to_polygons to simplify certain well-behaved paths in
           the vector backends (PDF, PS and SVG).  "path.simplify"
           must be set to True in matplotlibrc for this to work.  -
           MGD

2008-09-10 Add "filled" kwarg to Path.intersects_path and
           Path.intersects_bbox. - MGD

2008-09-07 Changed full arrows slightly to avoid an xpdf rendering
           problem reported by Friedrich Hagedorn. - JKS

2008-09-07 Fix conversion of quadratic to cubic Bezier curves in PDF
           and PS backends. Patch by Jae-Joon Lee. - JKS

2008-09-06 Added 5-point star marker to plot command - EF

2008-09-05 Fix hatching in PS backend - MGD

2008-09-03 Fix log with base 2 - MGD

2008-09-01 Added support for bilinear interpolation in
           NonUniformImage; patch by Gregory Lielens. - EF

2008-08-28 Added support for multiple histograms with data of
           different length - MM
