@@ -1,3 +1,7 @@
+2008-09-27 Allow spy to ignore zero values in sparse arrays, based
+           on patch by Tony Yu.  Also fixed plot to handle empty
+           data arrays, and fixed handling of markers in figlegend. - EF
+
 2008-09-24 Introduce drawstyles for lines. Transparently split linestyles
            like 'steps--' into drawstyle 'steps' and linestyle '--'.
            Legends always use drawstyle 'default'. - MM
@@ -81,7 +85,7 @@
 
 2008-07-24 Rewrite of a significant portion of the clabel code (class
 	   ContourLabeler) to improve inlining. - DMK
- 
+
 2008-07-22 Added Barbs polygon collection (similar to Quiver) for plotting
            wind barbs.  Added corresponding helpers to Axes and pyplot as
            well. (examples/pylab_examples/barb_demo.py shows it off.) - RMM
